[package]
name = "diesel_as_jsonb"
version = "0.1.0"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
license = "MIT"
description = "Use your structs as Jsonb with diesel and PG"
repository = "https://github.com/terry90/diesel_as_jsonb"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.10"
syn = { version = "0.15.20", features = ["derive"] }
proc-macro2 = "0.4.23"