[package]
name = "diesel-as-jsonb"
version = "0.1.2"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
license = "MIT"
description = "Use your structs as Jsonb with diesel and PG"
repository = "https://github.com/terry90/diesel_as_jsonb"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.12"
syn = { version = "0.15.34", features = ["derive"] }
proc-macro2 = "0.4.30"
heck = "0.3.1"